⬆️ improvement (MUNify): hide form if already filled individual application branch: main

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -202,5 +202,6 @@
 	"rotateCode": "Code erneuern",
 	"codeRotated": "Code erfolgreich erneuert",
 	"pronounsHeHim": "er/ihm",
-	"pronounsSheHer": "sie/ihr"
+	"pronounsSheHer": "sie/ihr",
+	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!"
 }
