--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -203,5 +203,13 @@
 	"codeRotated": "The code has been rotated",
 	"pronounsHeHim": "He/Him",
 	"pronounsSheHer": "She/Her",
-	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!"
+	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!",
+	"cookieNoticeHeading": "Wir verwenden Cookies",
+	"cookieNoticeDescription": "Delegator verwendet technisch notwendige Cookies um das Benutzen der App zu ermöglichen.",
+	"acceptAll": "Alle akzeptieren",
+	"rejectAll": "Alle ablehnen",
+	"managePreferences": "Einstellungen verwalten",
+	"close": "Schließen",
+	"technicalNecessary": "Technisch notwendig",
+	"technicalNecessaryDescription": "Delegator verwendet technisch notwendige Cookies um das Benutzen der App zu ermöglichen."
 }
