✨ feat (App Frontend): Add role display to my-account branch: 15-zitadel-roles-should-be-displayed-in-the-my-account-page-for-transparency-and-also-better-support-possibilities

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -203,5 +203,6 @@
 	"codeRotated": "Code erfolgreich erneuert",
 	"pronounsHeHim": "er/ihm",
 	"pronounsSheHer": "sie/ihr",
-	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!"
+	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!",
+	"rights": "Rechte"
 }
