✨ feat (App Frontend): Add Favicon and Title branch: 18-add-favicons

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -2,6 +2,14 @@
 	"$schema": "https://inlang.com/schema/inlang-message-format",
 	"signup": "Anmelden",
 	"registerNow": "Jetzt Anmelden",
+	"dashboard": "Dashboard",
+	"registration": "Anmeldung",
+	"admininstration": "Administration",
+	"imprintAndPrivacy": "Impressum & Datenschutz",
+	"aServiceBy": "Ein Service von",
+	"allRightsReservedby": "Alle Rechte vorbehalten von",
+	"version": "Version",
+	"sha": "SHA",
 	"back": "Zurück",
 	"backToHome": "Zurück zur Homepage",
 	"committee": "Gremium",
