chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -5,7 +5,7 @@
 	"dashboard": "Dashboard",
 	"registration": "Anmeldung",
 	"admininstration": "Administration",
-	"imprintAndPrivacy": "Impressum & Datenschutz",
+	"imprintAndPrivacy": "Impressum &amp; Datenschutz",
 	"aServiceBy": "Ein Service von",
 	"allRightsReservedby": "Alle Rechte vorbehalten von",
 	"version": "Version",
@@ -255,16 +255,16 @@
 	"assistantFlowFinalCreateDelegation1": "Dann müssen Sie jetzt zunächst eine Delegation erstellen.",
 	"assistantFlowFinalCreateDelegation2": "Anschließend können Sie Ihre Mitdelegierten über einen Beitrittscode oder einen magischen Link zur Anmeldung einladen.",
 	"assistantFlowFinalCreateDelegation3": "Der/die Ersteller*in wird automatisch zur Delegationsleiter*in.",
-	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Website.",
+	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowFinalIndividual1": "Als Journalist*in oder für andere spezielle Rollen können Sie sich nur als Einzelperson bewerben. Sie finden die Auswahlmöglichkeit für Ihre gewünschte Rolle in der Kategorie <em>Einzelbewerbung</em>.",
 	"assistantFlowFinalIndividual2": "Wir können Ihnen natürlich nicht garantieren, dass Sie ihre gewünschte Rolle tatsächlich bekommen.",
 	"assistantFlowFinalIndividual3": "Sollten wir Ihren Wunsch bei der Zuteilung nicht berücksichtigen können, wird die Teilnehmendenbetreuung Kontakt aufnehmen und mit Ihnen Alternativen besprechen.",
-	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung der Konferenz. Sie finden die Kontaktdaten auf der Website.",
+	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung der Konferenz. Sie finden die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowFinalIndividualDelegate1": "Kein Problem! Auch Einzelanmeldungen für Delegierte und NAs sind möglich.",
 	"assistantFlowFinalIndividualDelegate2": "In der Auswahl unter <em>Einzelbewerbung</em> finden Sie u.a. auch den Punkt<em>Einzelanmeldung als Delegierte*r</em>. Hier können Sie sich anmelden.",
 	"assistantFlowFinalIndividualDelegate3": "Die Bewerbung nimmt dann zur Ende der Anmeldephase an einem Matchmaking-Prozess teil, bei dem Ihnen ein freier Platz in einer Delegation oder als NA zugewiesen wird.",
 	"assistantFlowFinalIndividualDelegate4": "Bitte beachten Sie, dass Ihre Wunschmöglichkeiten bei einer Einzelbewerbung sehr eingeschränkt sind. Wenn Sie sich alleine bewerben, dann bekommen sie eine freie Rolle zugeteilt.",
-	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Website.",
+	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowFinalJoinDelegation1": "Super! Dann müssen Sie jetzt Ihre Delegationsleiter*innen bitten, Ihnen den Beitrittscode zu geben.",
 	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode können Sie dann der Delegation beitreten.",
 	"assistantFlowFinalJoinDelegation3": "Alternativ kann Ihnen auch der Delegationsleiter*in einen magischen Link zur Anmeldung schicken.",
@@ -272,10 +272,10 @@
 	"assistantFlowFinalSupervisor1": "Dann müssen Sie jetzt Ihre Delegationsleiter*innen (also die jeweiligen Ersteller*innen der Delegation) bitten, Ihnen den Beitrittscode zu geben.",
 	"assistantFlowFinalSupervisor2": "Anschließend können Sie sich als Betreuer*in anmelden.",
 	"assistantFlowFinalSupervisor3": "Sie können mehrere Delegationscodes auf einmal angeben und es ist auch auf dem gleichen Weg möglich, weiteren Delegationen nachträglich beizutreten.",
-	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Website.",
+	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmen Sie bitte für jede Delegation eine*n Delegationsleiter*in und lassen sie Ihre Schüler*innen die Delegation anlegen.",
 	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem Sie sich der Delegation als Betreuer*in anschließen können.",
-	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Website.",
+	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent vom MUNify Delegator.",
 	"assistantFlowParticipantOrSupervisor2": "Möchten Sie sich als Teilnehmende*r oder als Betreuer*in anmelden?",
 	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte mich als Teilnehmende*r anmelden.",
@@ -297,13 +297,13 @@
 	"assistantFlowRolePress2": "Als Journalist*in der Konferenzpresse berichten Sie über die Geschehnisse in den Gremien.",
 	"assistantFlowRolePress3": "Sie schreiben Artikel und Kommentare und produzieren auch Fernsehnachrichten, die an den Abenden der Konferenz gezeigt werden.",
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
-	"assistantFlowRoleOther2": "Manchmal gibt es bei unseren Konferenzen auch noch spezielle Rollen, die nicht in die oben genannten Kategorien passen.",
+	"assistantFlowRoleOther2": "Manchmal werden bei unseren Konferenzen auch noch spezielle Rollen angeboten, die nicht in die oben genannten Kategorien passen.",
 	"assistantFlowRoleOther3": "Diese können zum Beispiel <em>Richter*in am IGH</em> sein.",
 	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfahren Sie auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
 	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Landes teilnehmen.",
 	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
-	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen.",
+	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen (wenn verfügbar).",
 	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als Betreuende Person können sie nur bereits erstellte Delegationen überwachen.",
 	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen Ihre Schüler*innen die Delegation selbst erstellen. Sie können den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
 	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben Ihre Schüler*innen bereits Delegationen erstellt?",
