--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,6 +2,14 @@
 	"$schema": "https://inlang.com/schema/inlang-message-format",
 	"signup": "Sign up",
 	"registerNow": "Register now",
+	"dashboard": "Dashboard",
+	"registration": "Registration",
+	"admininstration": "Administration",
+	"imprintAndPrivacy": "Imprint &amp; Privacy Policy",
+	"aServiceBy": "A service by",
+	"allRightsReservedby": "All rights reserved by",
+	"version": "Version",
+	"sha": "SHA",
 	"back": "Back",
 	"backToHome": "Back To Home",
 	"committee": "Committee",
@@ -26,6 +34,13 @@
 	"selectConference": "First select the conference you would like to register for.",
 	"unknownLocation": "Unknown location",
 	"unknownDate": "Unknown date",
+	"unknownLanguage": "Language unknown",
+	"registrationOpen": "Registration open until {date}",
+	"registrationClosed": "Registration closed",
+	"registrationNotYetOpen": "Registration starts on {date}",
+	"unknownRegistrationStatus": "Registration status unknown",
+	"alreadRegistered": "Already registered",
+	"RegistrationNotPossible": "Registration not possible",
 	"conferenceSignupIntroduction": "You have various options for registering. You can apply for a state or non-state actor as a team of at least 2 people. For special roles such as a member of the conference press, you apply alone.",
 	"signUpAssistant": "Login wizard",
 	"signUpAssistantDescription": "The registration process can seem complicated at first glance. Use the registration wizard to get an overview.",
@@ -51,9 +66,12 @@
 	"next": "Weiter",
 	"pleaseAnswerTheFollowingQuestions": "Bitte beantworten Sie zunächst die folgenden Fragen. Sie können die Antworten vor der Anmeldung noch ändern.",
 	"whichSchoolDoesYourDelegationComeFrom": "Von welcher Schule / Institution kommen Sie (bzw. die Mehrheit Ihrer Delegation)?",
+	"whichSchoolDoYouComeFrom": "Which school / institution do you come from?",
 	"answerHere": "Antwort hier eingeben",
 	"whyDoYouWantToJoinTheConference": "Warum bewirbt sich Ihre Delegation bei der Konferenz?",
+	"whyDoYouWantToJoinTheConferenceSingleParticipant": "Why are you applying for these roles at the conference?",
 	"howMuchExperienceDoesYourDelegationHave": "Über wie viel Erfahrung mit politischen Planspielen wie Model United Nations verfügen Sie/Ihre Delegation?",
+	"howMuchExperienceDoesYourDelegationHaveSingleParticipant": "How much experience do you have with political simulation games such as Model United Nations?",
 	"pleaseCheckYourAnswers": "Bitte Überprüfen Sie noch einmal Ihre Angaben.",
 	"conference": "Konferenz",
 	"schoolOrInstitution": "Schule / Institution",
@@ -89,6 +107,8 @@
 	"todoEnterDelegationPreferencesHelp": "Indicate which countries or non-state actors you wish to represent. You must specify at least 3 preferences.",
 	"todoCompleteSignup": "Complete Registration",
 	"todoCompleteSignupHelp": "Complete all tasks and then click the button below to finalize your registration and participate in the selection process.",
+	"todoApplyForRole": "Apply for one (or more) roles",
+	"todoApplyForRoleHelp": "To apply for multiple roles, simply follow the single application process again.",
 	"delegationStatus": "Delegation Status",
 	"delegationMembers": "Delegation Members",
 	"name": "Name",
@@ -102,6 +122,7 @@
 	"setDelegationPreferences": "Set Preferences",
 	"changeDelegationPreferences": "Change Preferences",
 	"delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
+	"singleParticipantsIdForSupport": "If support asks you for your Individual Participant ID, you can find it here:",
 	"noMembersFound": "No delegation members found",
 	"noRoleApplications": "No role applications yet",
 	"amountOfDelegates": "Anzahl der Delegationsmitglieder",
@@ -142,6 +163,7 @@
 	"email": "E-Mail",
 	"userId": "Benutzer-ID",
 	"edit": "Bearbeiten",
+	"deleteAccountGPDR": "If you would like to have your account deleted in accordance with the GDPR, please contact the participant care team at a conference or send an email to <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a> .",
 	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
 	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten",
 	"activeMembers": "Active members",
@@ -151,6 +173,8 @@
 	"leaveDelegationConfirmation": "Are you sure you want to leave this delegation? You will no longer be able to rejoin without the delegation code.",
 	"makeHeadDelegateConfirmation": "Are you sure you want to make this member the head delegate of the delegation? You will be demoted to a regular member.",
 	"deleteDelegationConfirmation": "Are you sure you want to delete this delegation? This action cannot be undone.",
+	"deleteApplicationConfirmation": "Are you sure you want to delete this application? To undo the action, you must register again.",
+	"deleteAllApplicationsConfirmation": "Are you sure you want to delete all applications? To undo the action, you must register again.",
 	"nationsPool": "Nations Pool",
 	"nationsPoolDescription": "Here are the countries listed that are available for you to choose from. Each checkmark indicates that the respective country has a seat in the corresponding body. The column at the end shows how many delegates the country has in total at the conference. You cannot represent a country that has fewer seats than you have members in your delegation.",
 	"nsaPool": "Non-State Actors",
@@ -162,6 +186,7 @@
 	"completeSignupSuccess": "Registration Successfully Completed",
 	"completeSignupSuccessDescription": "Your registration has been successfully completed. You are now participating in the selection process. The selection process will take place after the registration phase ends and may take some time. You will be informed of the results via email. Please refrain from making inquiries.",
 	"noDangerZoneOptions": "Since you already completed the registration, you can neither leave nor delete the delegation. If you experience any trouble, please contact the participant care",
+	"noDangerZoneOptionsSingleParticipants": "Since you have already completed the online registration, you cannot leave or delete your individual application. If you experience any problems, please contact participant support.",
 	"profileSettings": "Profile Settings",
 	"logout": "Logout",
 	"feedback": "Feedback",
@@ -179,11 +204,17 @@
 	"signupNow": "Sign up Now",
 	"completeSignupWarningHeading": "Important: Complete Online Registration",
 	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
+	"completeSignupWarningTextSingleParticipant": "Although you have already applied for a role, registration is not yet complete. Please complete your registration in time before the application deadline so that we can consider your application in the selection process.",
 	"overview": "Übersicht",
 	"members": "Members",
 	"inTheDelegation": "in the delegation",
 	"tasks": "Tasks",
 	"doneToRegister": "done to register",
+	"roleApplications": "Role Applications",
+	"atThisConference": "at this conference",
+	"deleteAllApplications": "Delete all applications",
+	"role": "Role",
+	"description": "Description",
 	"delegations": "Delegationen",
 	"noDelegationsFound": "No delegations found",
 	"singleParticipants": "Single Participants",
@@ -192,9 +223,9 @@
 	"notApplied": "Application not yet submitted",
 	"ownPresence": "Own presence at the conference",
 	"ownPresenceDescription": "Here you can indicate whether you will be present at the conference. This information is important for the conference organizers to plan the conference. If you plan to attend, you too will have to pay the conference fee.",
-	"presentAtConference": "Present at the conference",
 	"willBePresentAtConference": "I will be present at the conference",
 	"willNotBePresentAtConference": "I will not be present at the conference",
+	"presentAtConference": "Present at the conference",
 	"registeredAsSupervisor": "You are logged in as a supervisor and can monitor the status of your delegations here. If you want to add more delegations, simply follow the registration process again.",
 	"addAnotherDelegation": "Add another delegation",
 	"noConferenceOpenForRegistration": "No conference open for registration",
@@ -211,5 +242,71 @@
 	"managePreferences": "Einstellungen verwalten",
 	"close": "Schließen",
 	"technicalNecessary": "Technisch notwendig",
-	"technicalNecessaryDescription": "Delegator verwendet technisch notwendige Cookies um das Benutzen der App zu ermöglichen."
+	"technicalNecessaryDescription": "Delegator verwendet technisch notwendige Cookies um das Benutzen der App zu ermöglichen.",
+	"yes": "Yes",
+	"no": "No",
+	"delegationSizeExceeded": "Delegation has too many members",
+	"delegationSizeExceededDescription": "The delegation has already exceeded the maximum number of members. Therefore, you no longer have any countries or NAs to select. Please reduce the number of members to be able to select countries or NSA again and thus enable registration.",
+	"noNationsAvailable": "No other countries are available for your delegation size.",
+	"noNSAAvailable": "There are no (other) NSA available at your delegation size.",
+	"assistantFlowDelegateHavePartners1": "Very nice! The normal application process for delegates and representatives of NSA is designed for group registrations of at least 2 people.",
+	"assistantFlowDelegateHavePartners2": "However, if you don't know anyone in your area who would like to participate with you, that's not a big problem.",
+	"assistantFlowDelegateHavePartners3": "Do you have people you can form a group with?",
+	"assistantFlowFinalCreateDelegation1": "Then you first have to create a delegation.",
+	"assistantFlowFinalCreateDelegation2": "You can then invite your fellow delegates to join using a join code or magic link.",
+	"assistantFlowFinalCreateDelegation3": "The creator automatically becomes the Head Delegate.",
+	"assistantFlowFinalCreateDelegation4": "If you have any questions or problems, please contact the project's participant care team. You can find the contact details on the conference website.",
+	"assistantFlowFinalIndividual1": "As a journalist or for other special roles, you can only apply as an individual. You can find the option to select your desired role in the <em>Individual Application</em> category.",
+	"assistantFlowFinalIndividual2": "Of course, we cannot guarantee that you will actually get the role you want.",
+	"assistantFlowFinalIndividual3": "If we are unable to accommodate your request for allocation, the participant care team will contact you and discuss alternatives with you.",
+	"assistantFlowFinalIndividual4": "If you have any questions or problems, please contact the conference participant care team. You can find the contact details on the conference website.",
+	"assistantFlowFinalIndividualDelegate1": "No problem! Individual registrations for delegates and NSA are also possible.",
+	"assistantFlowFinalIndividualDelegate2": "In the selection under <em>individual application</em> you will also find the option <em>Individual registration as a delegate</em> . You can register here.",
+	"assistantFlowFinalIndividualDelegate3": "The application will then participate in a matchmaking process at the end of the registration period, where you will be assigned a free place in a delegation or as an NSA.",
+	"assistantFlowFinalIndividualDelegate4": "Please note that your options are very limited if you apply individually. If you apply alone, you will be assigned a vacant role.",
+	"assistantFlowFinalIndividualDelegate5": "If you have any questions or problems, please contact the project's participant care team. You can find the contact details on the conference website.",
+	"assistantFlowFinalJoinDelegation1": "Great! Now you need to ask your delegation leaders to give you the access code.",
+	"assistantFlowFinalJoinDelegation2": "You can then use the join code to join the delegation.",
+	"assistantFlowFinalJoinDelegation3": "Alternatively, the head of delegation can send you a magic link to register.",
+	"assistantFlowFinalJoinDelegation4": "If you have any questions or problems, please contact the project's participant care team. You can find the contact details on the website.",
+	"assistantFlowFinalSupervisor1": "You must now ask your delegation leaders (i.e. the respective creators of the delegation) to give you the joining code.",
+	"assistantFlowFinalSupervisor2": "You can then register as a supervisor.",
+	"assistantFlowFinalSupervisor3": "You can specify several delegation codes at once and it is also possible to join additional delegations later in the same way.",
+	"assistantFlowFinalSupervisor4": "If you have any questions or problems, please contact the project's participant care team. You can find the contact details on the conference website.",
+	"assistantFlowFinalSupervisorAnswerWait1": "Then please appoint a Head Delegate for each delegation and let your students create the delegation.",
+	"assistantFlowFinalSupervisorAnswerWait2": "The delegation members will then receive a joining code with which they can join the delegation as a supervisor.",
+	"assistantFlowFinalSupervisorAnswerWait3": "If you have any questions or problems, please contact the project's participant support team. You can find the contact details on the conference website.",
+	"assistantFlowParticipantOrSupervisor1": "Hello! I am the registration assistant of the MUNify Delegator.",
+	"assistantFlowParticipantOrSupervisor2": "Would you like to register as a participant or as a supervisor?",
+	"assistantFlowParticipantOrSupervisorAnswer1": "I would like to register as a participant.",
+	"assistantFlowParticipantOrSupervisorAnswer2": "I would like to register as a supervisor.",
+	"assistantFlowPartnersCreatedDelegation1": "Wonderful! Then you've come to the right place.",
+	"assistantFlowPartnersCreatedDelegation2": "Since registration as a group must also be closed, you must first clarify whether someone in your group has already created a delegation that you can join.",
+	"assistantFlowPartnersCreatedDelegation3": "The creator of a delegation automatically becomes the delegation leader",
+	"assistantFlowPartnersCreatedDelegation4": "Do you already have a delegation leader who has already created a delegation?",
+	"assistantFlowPartnersCreatedDelegationAnswer1": "Yes, there is already a delegation.",
+	"assistantFlowPartnersCreatedDelegationAnswer2": "No, no one has created a delegation yet.",
+	"assistantFlowRole1": "Great - welcome! So that I can guide you through the registration process correctly, please tell me which role you would like to take on.",
+	"assistantFlowRole2": "Here is a brief overview of your options including explanations:",
+	"assistantFlowRoleDelegate1": "Delegate",
+	"assistantFlowRoleDelegate2": "As a delegate, you represent the specific interests of a country in one of the conference’s bodies.",
+	"assistantFlowRoleNSA1": "Representative of a NSA",
+	"assistantFlowRoleNSA2": "As a representative of a non-state actor (NSA), you represent an organization.",
+	"assistantFlowRoleNSA3": "You are not tied to a specific committee but can influence the committees that deal with the most important issues for your organization",
+	"assistantFlowRolePress1": "Journalist",
+	"assistantFlowRolePress2": "As a journalist for the conference press, you report on what happens in the committees.",
+	"assistantFlowRolePress3": "They write articles and commentaries and also produce television news reports that are shown on the evenings of the conference.",
+	"assistantFlowRoleOther1": "Other special role",
+	"assistantFlowRoleOther2": "Sometimes we offer special roles at our conferences that do not fit into the categories above.",
+	"assistantFlowRoleOther3": "These could, for example, be <em>judges at the ICJ</em> .",
+	"assistantFlowRoleOther4": "You can find out whether there are offers such as the simulation of a crisis or the International Court of Justice on the conference website or in the individual registration options.",
+	"assistantFlowRoleAnswer1": "I would like to participate as a delegate of a country.",
+	"assistantFlowRoleAnswer2": "I would like to participate as a representative of a non-state actor.",
+	"assistantFlowRoleAnswer3": "I would like to participate as a journalist from the conference press.",
+	"assistantFlowRoleAnswer4": "I would like to take on another specific role (if available).",
+	"assistantFlowSupervisorUsersAlreadyRegistered1": "Very nice! As a supervisor, you can only monitor delegations that have already been created.",
+	"assistantFlowSupervisorUsersAlreadyRegistered2": "Important: Unlike before, your students must now create the delegation themselves. You can then join the delegations as a supervisor using the delegation code.",
+	"assistantFlowSupervisorUsersAlreadyRegistered3": "Have your students already created delegations?",
+	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer1": "Yes, they did.",
+	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer2": "No, not yet."
 }
