🐞 fix (App Frontend): Make nation pools scrollable on mobile branch: 48-mobile-pool-table-für-nations-and-nsas-not-x-scrollable-in-roleapplication-dialog

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -228,6 +228,7 @@
 	"presentAtConference": "Present at the conference",
 	"registeredAsSupervisor": "You are logged in as a supervisor and can monitor the status of your delegations here. If you want to add more delegations, simply follow the registration process again.",
 	"addAnotherDelegation": "Add another delegation",
+	"addAnotherApplication": "Add another application",
 	"noConferenceOpenForRegistration": "No conference open for registration",
 	"noConferenceOpenForRegistrationText": "There are currently no conferences you can register for. Please check the respective conference website for registration periods.",
 	"rotateCode": "Rotate Code",
