--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -228,6 +228,7 @@
 	"presentAtConference": "Anwesend auf der Konferenz",
 	"registeredAsSupervisor": "Sie sind als Betreuer*in angemeldet und können hier den Status ihrer Delegationen überwachen. Wenn Sie weitere Delegationen hinzufügen möchten, folgen Sie einfach erneut dem Anmeldeprozess.",
 	"addAnotherDelegation": "Weitere Delegation hinzufügen",
+	"addAnotherApplication": "Weitere Bewerbung hinzufügen",
 	"noConferenceOpenForRegistration": "Keine Konferenz zur Anmeldung geöffnet",
 	"noConferenceOpenForRegistrationText": "Es gibt derzeit keine Konferenzen, für die Sie sich anmelden können. Bitte informieren Sie sich auf der Website der jeweiligen Konferenz über die Anmeldezeiträume.",
 	"rotateCode": "Code erneuern",
