chore: update translations with Fink 🐦

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,4 @@
-	{
+{
 		"$schema": "https://inlang.com/schema/inlang-message-format",
 		"signup": "Sign up",
 		"registerNow": "Register now",
@@ -52,15 +52,42 @@
 		"joinDelegationDescription": "Here you can join a delegation with a code issued to you by the head of delegation.",
 		"individualApplication": "Individual application",
 		"individualApplicationDescription": "Here you can apply on your own for a place in one of the special delegations such as the conference press.",
+		"individualApplicationDescription2": "Here you can apply as an individual for specific roles. These roles are not tied to delegation. If you are not accepted for the role, we will contact you and suggest another role.",
 		"supervisor": "Supervisor",
 		"supervisors": "Supervisors",
+		"supervisorDelegationDescription": "Supervisors can monitor the status of your delegation. Please contact the Participant Support Team if a supervisor unexpectedly joins your delegation.",
 		"applyAsSupervisor": "Apply as Supervisor",
 		"applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support.",
+		"infos": "Info",
+		"questionnaire": "Questionnaire",
+		"review": "Review",
+		"invite": "Invite",
+		"createDelegationProcessExplaination": "<p class='max-ch-md'>You are about to create a delegation. After you have created a delegation, you can invite delegation partners and apply as a delegate for a state or as a representative of a non-state actor.</p><p class='max-ch-md'> You will automatically be registered as the Head Delegate. You can also invite a supervisor who will help you organize the delegation.</p><p class='max-ch-md'> Please note that you cannot apply for a delegation on your own. If you would like to apply on your own, look <a href='./individual' class='link underline'>here</a> for individual roles that you can apply for. The participant care team will also be happy to help you find delegation partners. You can find the contact details on the website of the respective conference.</p>",
+		"next": "Next",
+		"pleaseAnswerTheFollowingQuestions": "Please answer the following questions first. You can change your answers before registering.",
+		"whichSchoolDoesYourDelegationComeFrom": "Which school/institution do you (or the majority of your delegation) come from?",
 		"whichSchoolDoYouComeFrom": "Which school / institution do you come from?",
+		"answerHere": "Enter answer here",
+		"whyDoYouWantToJoinTheConference": "Why is your delegation applying to the conference?",
 		"whyDoYouWantToJoinTheConferenceSingleParticipant": "Why are you applying for these roles at the conference?",
+		"howMuchExperienceDoesYourDelegationHave": "How much experience do you/your delegation members have with political simulation games such as Model United Nations?",
 		"howMuchExperienceDoesYourDelegationHaveSingleParticipant": "How much experience do you have with political simulation games such as Model United Nations?",
+		"pleaseCheckYourAnswers": "Please check your details again.",
+		"conference": "Conference",
+		"schoolOrInstitution": "School / Institution",
+		"motivation": "Motivation",
+		"experience": "Experience",
+		"delegationCreatedSuccessfully": "Delegation created successfully.",
+		"nowYouCanInvitePeople": "Now all you have to do is invite delegation partners. To do this, you can send the following link to the people you want to invite:",
+		"orShareThisCode": "Or share with them the following code, which they can use to log in to this website (the code is also valid for supervisors):",
 		"inviteMorePeople": "Invite more people",
 		"inviteMorePeopleDescription": "Invite additional members to your delegation. The minimum required number of members is 2.",
+		"linkCopied": "Link copied",
+		"codeCopied": "Code copied",
+		"toDashboard": "To the dashboard",
+		"pleaseCheckDelegation": "Review the information and confirm joining the delegation.",
+		"confirm": "Confirm",
+		"headDelegate": "Head Delegate",
 		"dangerZone": "Danger Zone",
 		"leaveDelegation": "Leave Delegation",
 		"deleteDelegation": "Delete Delegation",
@@ -98,8 +125,47 @@
 		"singleParticipantsIdForSupport": "If support asks you for your Individual Participant ID, you can find it here:",
 		"noMembersFound": "No delegation members found",
 		"noRoleApplications": "No role applications yet",
+		"amountOfDelegates": "Number of delegation members",
+		"signupForSupervisors": "Registration for Supervisors",
+		"delegationJoinForSupervisorsDescription": "As a supervisor, you can monitor several delegations. To do this, ask the Head Delegate for the delegation code. Please note that you cannot create delegations for your students yourself. You can only join a delegation after receiving the code.",
+		"myAccount": "My Account",
+		"herYouFindYourAccountInfo": "Here you will find all information and preferences related to your account.",
+		"completeData": "Complete data",
+		"completeDataExplaination": "Thank you for registering. Please complete your personal details to complete your registration. You can then continue where you wanted to go. If you click on Save, you will be automatically redirected.",
+		"personalData": "Personal Data",
+		"phoneNumber": "Telephone number",
+		"address": "Address",
+		"street": "Street",
+		"streetAddition": "e.g. Apartment",
+		"zipCode": "ZIP",
+		"city": "City",
+		"pleaseSelectCountry": "Country",
+		"birthDate": "Birth Date",
+		"gender": "Gender",
+		"pleaseSelect": "Please select",
+		"male": "male",
+		"female": "female",
+		"diverse": "other",
+		"unspecified": "Not specified",
+		"pronouns": "Pronouns",
+		"pronounsExample": "e.g. he/him or she/her",
+		"diet": "Diet",
+		"vegan": "Vegan",
+		"vegetarian": "Vegetarian",
+		"omnivore": "Omnivorous",
 		"save": "Save",
+		"saveAndContinue": "Save and continue",
+		"loginInformation": "Login information",
+		"loginName": "Username",
+		"password": "Password",
+		"firstName": "Given Name",
+		"lastName": "Surname",
+		"email": "E-mail",
+		"userId": "User ID",
+		"edit": "Edit",
 		"deleteAccountGPDR": "If you would like to have your account deleted in accordance with the GDPR, please contact the participant care team at a conference or send an email to <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a> .",
+		"receiveGeneralInformation": "Receive general emails about the project",
+		"receiveJoinTeamInformation": "Receive emails about joining the DMUN team/organization",
 		"activeMembers": "Active members",
 		"removeMember": "Remove member",
 		"removeMemberConfirmation": "Are you sure you want to remove this member from the delegation?",
@@ -132,10 +198,14 @@
 		"allConferences": "All Conferences",
 		"title": "Title",
 		"location": "Location",
+		"pickIcon": "Select icon",
+		"search": "Search",
+		"submit": "Send",
 		"signupNow": "Sign up Now",
 		"completeSignupWarningHeading": "Important: Complete Online Registration",
 		"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
 		"completeSignupWarningTextSingleParticipant": "Although you have already applied for a role, registration is not yet complete. Please complete your registration in time before the application deadline so that we can consider your application in the selection process.",
+		"overview": "Overview",
 		"members": "Members",
 		"inTheDelegation": "in the delegation",
 		"tasks": "Tasks",
@@ -145,6 +215,7 @@
 		"deleteAllApplications": "Delete all applications",
 		"role": "Role",
 		"description": "Description",
+		"delegations": "Delegations",
 		"noDelegationsFound": "No delegations found",
 		"singleParticipants": "Single Participants",
 		"noSingleApplicationTrackingYet": "Status tracking for single applications is not yet available.",
@@ -163,7 +234,16 @@
 		"codeRotated": "The code has been rotated",
 		"pronounsHeHim": "He/Him",
 		"pronounsSheHer": "She/Her",
+		"alreadyAnsweredAllQuestions": "You have already answered all the questions!",
 		"rights": "Rights",
+		"cookieNoticeHeading": "We use cookies",
+		"cookieNoticeDescription": "Delegator uses technically necessary cookies to enable the use of the app.",
+		"acceptAll": "Accept all",
+		"rejectAll": "Reject all",
+		"managePreferences": "Manage settings",
+		"close": "Close",
+		"technicalNecessary": "Technically necessary",
+		"technicalNecessaryDescription": "Delegator uses technically necessary cookies to enable the use of the app.",
 		"yes": "Yes",
 		"no": "No",
 		"delegationSizeExceeded": "Delegation has too many members",
@@ -235,4 +315,4 @@
 		"youAreAlreadySingleParticipant": "You are already a single participant in this conference",
 		"youAreAlreadyDelegationMember": "You are already a delegation member in this conference",
 		"youAreAlreadyTeamMember": "You are already a team member in this conference"
-	}
+}
