--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -62,7 +62,7 @@
 	"questionnaire": "Fragebogen",
 	"review": "Überprüfen",
 	"invite": "Einladen",
-	"createDelegationProcessExplaination": "<p class='max-ch-md'>Sie sind im Begriff, eine Delegation anzulegen. Nachdem Sie eine Delegation angelegt haben, können Sie Delegationspartner*innen einladen und sich geschlossen als Delegierte auf einen Staat oder als Vertreter*innen einer/eines Nichtstaatlichen Aktuer*in bewerben.</p><p class='max-ch-md'>Sie werden automatisch als Delegationsleiter*in eingetragen. Sie können auch eine betreuende Person eintragen, die Sie bei der Organisation der Delegation unterstützt. </p><p class='max-ch-md'>Bitte beachten Sie, dass Sie sich nicht alleine auf eine Delegation bewerben können. Wenn Sie sich alleine bewerben möchten, schauen Sie <a href='./individual' class='link underline'>hier</a> nach Einzelplätzen, auf die Sie sich bewerben können. Außerdem hilft Ihnen die Teilnehmendenbetreuung sehr gerne bei der Vermittlung von Delegationspartner*innen. Den Kontakt finden Sie auf der Website der jeweiligen Konferenz. </p>",
+	"createDelegationProcessExplaination": "<p class='max-ch-md'>Sie sind im Begriff, eine Delegation anzulegen. Nachdem Sie eine Delegation angelegt haben, können Sie Delegationspartner*innen einladen und sich geschlossen als Delegierte auf einen Staat oder als Vertreter*innen einer/eines Nichtstaatlichen Aktuer*in bewerben.</p><p class='max-ch-md'>Sie werden automatisch als Delegationsleiter*in eingetragen. Sie können auch eine betreuende Person einladen, die Sie bei der Organisation der Delegation unterstützt. </p><p class='max-ch-md'>Bitte beachten Sie, dass Sie sich nicht alleine auf eine Delegation bewerben können. Wenn Sie sich alleine bewerben möchten, schauen Sie <a href='./individual' class='link underline'>hier</a> nach Einzelplätzen, auf die Sie sich bewerben können. Außerdem hilft Ihnen die Teilnehmendenbetreuung sehr gerne bei der Vermittlung von Delegationspartner*innen. Den Kontakt finden Sie auf der Website der jeweiligen Konferenz. </p>",
 	"next": "Weiter",
 	"pleaseAnswerTheFollowingQuestions": "Bitte beantworten Sie zunächst die folgenden Fragen. Sie können die Antworten vor der Anmeldung noch ändern.",
 	"whichSchoolDoesYourDelegationComeFrom": "Von welcher Schule / Institution kommen Sie (bzw. die Mehrheit Ihrer Delegation)?",
@@ -79,7 +79,7 @@
 	"experience": "Erfahrung",
 	"delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
 	"nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
-	"orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
+	"orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können (der Code gilt auch für Betreuer*innen):",
 	"inviteMorePeople": "Mehr Menschen einladen",
 	"inviteMorePeopleDescription": "Lade weitere Mitglieder in deine Delegation ein. Die erforderliche Mindestanzahl an Mitgliedern beträgt 2.",
 	"linkCopied": "Link kopiert",
@@ -165,7 +165,7 @@
 	"edit": "Bearbeiten",
 	"deleteAccountGPDR": "Wenn Sie Ihr Konto DSGVO-konform löschen lassen möchten, wenden Sie sich bitte an die Teilnehmendenbetreuung einer Konferenz oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
-	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten",
+	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins DMUN Team/den Verein erhalten",
 	"activeMembers": "Aktive Mitglieder",
 	"removeMember": "Mitglied entfernen",
 	"removeMemberConfirmation": "Möchtest du dieses Mitglied wirklich entfernen?",
