--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -17,7 +17,7 @@
 	"homeYourConferencesBtn": "Zum Dashboard",
 	"homeDraftDisclaimerHeader": "Seite im Aufbau",
 	"homeDraftDisclaimer": "Diese Seite befindet sich noch im Aufbauprozess. Bitte haben Sie Verständnis, dass einerseits noch nicht alle Funktionen verfügbar sind und es außerdem zu Fehlern kommen kann. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Anwendung weiter aufzubauen.",
-	"homeDraftPleaseHelp": "Um Ihnen das beste Erlebnis zu bereiten, sind wir auf Ihre Hilfe angewiesen: Wenn Sie einen Vorschlag haben oder Ihnen ein Bug, Problem oder Fehler auffällt, dann melden Sie dies gerne über unser Feedback-Board.",
+	"homeDraftPleaseHelp": "Um Ihnen das bestmögliche Erlebnis zu bereiten, sind wir auf Ihre Hilfe angewiesen: Wenn Sie einen Vorschlag haben oder Ihnen ein Bug, Problem oder Fehler auffällt, dann melden Sie dies gerne über unser Feedback-Board.",
 	"homeHelpWithTechnicalIssuesHeadline": "Hilfe bei technischen Problemen",
 	"homeHelpWithTechnicalIssues": "Wenn Sie technische Probleme haben, helfen wir Ihnen gerne auch persönlich weiter. Wenden Sie sich dafür entweder an die Teilnehmendenbetreuung des jeweiligen Projektes oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Unsere Konferenzen",
