--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -178,7 +178,7 @@
 	"submit": "Senden",
 	"signupNow": "Sign up Now",
 	"completeSignupWarningHeading": "Important: Complete Online Registration",
-	"completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
+	"completeSignupWarningText": "Although you have already created a delegation or joined one, the application is not yet complete. In order to consider your application, please finalize your application in a timely manner before the application deadline.",
 	"overview": "Übersicht",
 	"members": "Members",
 	"inTheDelegation": "in the delegation",
