chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -63,7 +63,7 @@
 	"nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
 	"orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
 	"inviteMorePeople": "Mehr Menschen einladen",
-	"inviteMorePeopleDescription": "Lade weitere Mitglieder in deine Delegation ein. Die erforderliche Mindestanzahl an Mitgliedern beträgt 2.",
+	"inviteMorePeopleDescription": "Laden Sie weitere Mitglieder in Ihre Delegation ein. Ihre Delegation benötigt mindestens 2 Mitglieder.",
 	"linkCopied": "Link kopiert",
 	"codeCopied": "Code kopiert",
 	"toDashboard": "Zum Dashboard",
@@ -82,7 +82,7 @@
 	"conpleteSignupWarningText": "Du hast zwar bereits eine Delegation erstellt bzw. bist einer Delegation beigetreten, aber die Anmeldung ist noch nicht abgeschlossen. Bitte schließe die Anmeldung rechtzeitig vor Anmeldeschluss ab, sodass wir die Anmeldung deiner Delegation berücksichtigen können.",
 	"todoCreateDelegation": "Delegation erstellen",
 	"todoInvitePeople": "Menschen einladen",
-	"todoInvitePeopleHelp": "Lade weitere Mitglieder in deine Delegation ein. Die erforderliche Mindestanzahl an Mitgliedern beträgt 2.",
+	"todoInvitePeopleHelp": "Laden Sie weitere Mitglieder in Ihre Delegation ein. Ihre Delegation benötigt mindestens 2 Mitglieder.",
 	"todoAnswerQuestionaire": "Fragebogen beantworten",
 	"todoAnswerQuestionaireHelp": "Beantworte alle Fragen zu Motivation und Erfahrung, um deine Delegation zu vervollständigen.",
 	"todoEnterDelegationPreferences": "Vertretungswünsche eingeben",
