chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -97,8 +97,8 @@
 	"informationAndMotivationDescriptionHeadDelegate": "Hier können Sie die für die Bewerbung erforderlichen Informationen und Motivation bearbeiten.",
 	"informationAndMotivationDescriptionMember": "Hier können Sie die für die Bewerbung erforderlichen Informationen und Motivation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
 	"delegationPreferences": "Vertretungswünsche",
-	"delegationPreferencesDescriptionHeadDelegate": "Hier können Sie die Vertretungswünsche für Ihre Delegation bearbeiten.",
-	"delegationPreferencesDescriptionMember": "Hier können Sie die Vertretungswünsche für Ihre Delegation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
+	"delegationPreferencesDescriptionHeadDelegate": "Wählen Sie hier, welche Staaten/Organisationen Ihre Delegation vertreten möchte. Sie können mehrere Wünsche abgeben.",
+	"delegationPreferencesDescriptionMember": "Hier können Sie die Vertretungswünsche Ihrer Delegation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
 	"setDelegationPreferences": "Wünsche festlegen",
 	"changeDelegationPreferences": "Wünsche anpassen",
 	"delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
