chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -75,8 +75,8 @@
 	"deleteDelegation": "Delegation löschen",
 	"transferHeadDelegateship": "Delegationsleitung übertragen",
 	"completeSignup": "Anmeldung abschließen",
-	"completeSignupDescriptionHeadDelegate": "Bitte erledigen Sie alle hier aufgeführten Aufgaben. Sobald Sie alle Aufgaben abgeschlossen haben, können Sie die Registrierung abschließen und am Auswahlverfahren teilnehmen. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
-	"completeSignupDescription": "Bitte erledigen Sie alle Aufgaben gemeinsam mit Ihrem Delegationsleitung. Diese*r kann anschließend die Anmeldung abschließen, sodass sie am Auswahlverfahren teilnehmen können. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
+	"completeSignupDescriptionHeadDelegate": "Bitte erledigen Sie alle hier aufgeführten Aufgaben. Sobald Sie alle Aufgaben abgeschlossen haben, können Sie die Anmeldung abschließen und am Auswahlverfahren teilnehmen. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr rückgängig gemacht werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
+	"completeSignupDescription": "Bitte erledigen Sie alle Aufgaben gemeinsam mit Ihrer Delegationsleitung. Diese kann anschließend die Anmeldung abschließen, sodass sie am Auswahlverfahren teilnehmen können. Sobald die Anmeldung abgeschlossen ist, kann sie nicht mehr geändert werden – bitte stellen Sie daher sicher, dass alle Informationen korrekt sind und Sie und Ihre Delegation mit der Bewerbung zufrieden sind.",
 	"completeSignupButton": "Anmeldung verbindlich abschließen und damit am Auswahlverfahren teilnehmen",
 	"conpleteSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
 	"conpleteSignupWarningText": "Du hast zwar bereits eine Delegation erstellt bzw. bist einer Delegation beigetreten, aber die Anmeldung ist noch nicht abgeschlossen. Bitte schließe die Anmeldung rechtzeitig vor Anmeldeschluss ab, sodass wir die Anmeldung deiner Delegation berücksichtigen können.",
@@ -110,7 +110,7 @@
 	"myAccount": "Mein Konto",
 	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
 	"completeData": "Daten Vervollständigen",
-	"completeDataExplaination": "Vielen Dank für deine Registrierung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
+	"completeDataExplaination": "Vielen Dank für deine Anmeldung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
 	"personalData": "Persönliche Daten",
 	"phoneNumber": "Telefonnummer",
 	"address": "Addresse",
@@ -160,8 +160,8 @@
 	"noPreferencesSet": "Es wurde noch keine Präferenz festgelegt.",
 	"completeSignupConfirmation": "Möchten Sie die Anmeldung wirklich abschließen? Nach dem Abschluss können Sie keine Änderungen mehr vornehmen.",
 	"completeSignupSuccess": "Anmeldung erfolgreich abgeschlossen",
-	"completeSignupSuccessDescription": "Ihre Anmeldung wurde erfolgreich abgeschlossen. Sie nehmen nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Sie werden per E-Mail über das Ergebnis informiert. Bitte sehen Sie von Nachfragen ab.",
-	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die Delegation weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
+	"completeSignupSuccessDescription": "Ihre Anmeldung wurde erfolgreich abgeschlossen. Sie nehmen nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Sie werden per E-Mail über das Ergebnis informiert. Wir bitten Sie, bis dahin von Nachfragen abzusehen.",
+	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die Delegation weder verlassen noch löschen. Bei Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung.",
 	"profileSettings": "Profilverwaltung",
 	"logout": "Logout",
 	"feedback": "Feedback",
