chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -67,7 +67,7 @@
 	"linkCopied": "Link kopiert",
 	"codeCopied": "Code kopiert",
 	"toDashboard": "Zum Dashboard",
-	"pleaseCheckDelegation": "Überprüfe die Angaben und bestätige den Beitritt zur Delegation.",
+	"pleaseCheckDelegation": "Überprüfen Sie die Angaben und bestätigen Sie den Beitritt zur Delegation.",
 	"confirm": "Bestätigen",
 	"headDelegate": "Delegationsleiter*in",
 	"dangerZone": "Danger Zone",
