chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -6,7 +6,7 @@
 	"backToHome": "Zurück zur Homepage",
 	"committee": "Gremium",
 	"noConferenceHeading": "Keine Konferenz",
-	"noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz registriert.",
+	"noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz angemeldet.",
 	"homeHeroSub": "Zentrale Anmeldeplattform für DMUN-Konferenzen",
 	"home": "Startseite",
 	"homeRegistration": "Konferenzanmeldung",
